reports/f_rs_edit.log
Traceback (most recent call last):
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/mnt/space/miniconda3/envs/pygisbook/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import geowombat as gw
from geowombat.data import l8_224078_20200518
 
# Zeros are replaced with nans
with gw.config.update(scale_factor=0.0001):
  with gw.open(l8_224078_20200518) as src:
    src.attrs{'scales'}
------------------

[0;36m  Cell [0;32mIn [3], line 7[0;36m[0m
[0;31m    src.attrs{'scales'}[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2605809337.py, line 7)

